--- a/rssweb/.settings/org.eclipse.core.resources.prefs
+++ b/rssweb/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/searchweb/core/AStrategy.java=UTF-8
+encoding//src/main/resources/baiduDetail.properties=UTF-8
