--- a/rssweb/src/main/resources/baiduDetail.properties
+++ b/rssweb/src/main/resources/baiduDetail.properties
@@ -4,7 +4,7 @@ keyword=http://top.baidu.com/buzz.php?p=top10
 #世说新词
 shishuoxinci=http://top.baidu.com/buzz.php?p=shishuoxinci
 #test git hub, github, push
-#remove remote edit
+#local edit
 
 #####事件#############
 shijian=http://top.baidu.com/buzz.php?p=shijian
