--- a/rssweb/src/main/resources/baiduDetail.properties
+++ b/rssweb/src/main/resources/baiduDetail.properties
@@ -5,6 +5,7 @@ keyword=http://top.baidu.com/buzz.php?p=top10
 shishuoxinci=http://top.baidu.com/buzz.php?p=shishuoxinci
 #test git hub, github, push
 #local edit
+#home to update
 
 #####事件#############
 shijian=http://top.baidu.com/buzz.php?p=shijian
