--- a/rssweb/src/main/resources/baiduDetail.properties
+++ b/rssweb/src/main/resources/baiduDetail.properties
@@ -6,6 +6,7 @@ shishuoxinci=http://top.baidu.com/buzz.php?p=shishuoxinci
 #test git hub, github, push
 #local edit
 #home to update
+#office update
 
 #####事件#############
 shijian=http://top.baidu.com/buzz.php?p=shijian
