--- a/rssweb/src/main/resources/baiduDetail.properties
+++ b/rssweb/src/main/resources/baiduDetail.properties
@@ -7,6 +7,7 @@ shishuoxinci=http://top.baidu.com/buzz.php?p=shishuoxinci
 #local edit
 #home to update
 #office update
+#home update
 
 #####事件#############
 shijian=http://top.baidu.com/buzz.php?p=shijian
